--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
             <option value="Panadería / Confitería">Panadería / Confitería</option>
           </optgroup>
           <optgroup label="Servicios">
-            
             <option value="Servicio Profesional (Contador, Abogado, etc.)">Servicio Profesional (Contador, Abogado, etc.)</option>
             <option value="Servicio Técnico (Local)">Servicio Técnico (Local)</option>
             <option value="Servicio a Domicilio">Servicio a Domicilio (Plomero, Electricista, etc.)</option>
@@ -72,7 +71,6 @@
         <p class="input-info">Usaremos esta dirección para crear un link a Google Maps.</p>
       </fieldset>
 
-      <!-- ACORDEÓN HORARIOS -->
       <!-- ACORDEÓN HORARIOS (VERSIÓN RESPONSIVE) -->
       <div class="acordeon">
           <button type="button" class="acordeon-header">
@@ -80,15 +78,9 @@
               <span class="acordeon-icon">+</span>
           </button>
           <div class="acordeon-content">
-              <p class="input-info">Marcá los días que abrís y completá los horarios. Si tenés horario corrido, usá solo el campo "Mañana".</p>
+              <p class="input-info">Marcá los días que abrís y completá los horarios. Si tenés horario corrido, usá solo un campo.</p>
               <div class="horarios-lista-responsive">
-                <!-- El contenido se generará con JavaScript -->
-              </div>
-          </div>
-      </div>
-                          `);
-                      });
-                  </script>
+                <!-- JavaScript llenará esta sección dinámicamente -->
               </div>
           </div>
       </div>
